--- a/project.config.json
+++ b/project.config.json
@@ -40,7 +40,7 @@
   },
   "compileType": "miniprogram",
   "libVersion": "2.14.1",
-  "appid": "wx76356403ff233830",
+  "appid": "wxb2e4c9db04332159",
   "projectname": "miniapp-base",
   "debugOptions": {
     "hidedInDevtools": []
