--- a/app.json
+++ b/app.json
@@ -29,6 +29,12 @@
     "borderStyle": "black",
     "list": [
       {
+        "pagePath": "pages/tabbar/home/index",
+        "iconPath": "/assets/image/tabbar/index.png",
+        "selectedIconPath": "/assets/image/tabbar/index-select.png",
+        "text": "首页"
+      },
+      {
         "pagePath": "pages/tabbar/course-ware/index",
         "iconPath": "/assets/image/tabbar/course-ware.png",
         "selectedIconPath": "/assets/image/tabbar/course-ware-select.png",
@@ -63,7 +69,7 @@
     "van-icon": "@vant/weapp/icon/index",
     "van-sidebar": "@vant/weapp/sidebar/index",
     "van-sidebar-item": "@vant/weapp/sidebar-item/index",
-    "coolui-scroll": "coolui-scroller/index",
+    "scroll": "/components/scroller",
     "container": "/components/container"
   },
   "sitemapLocation": "sitemap.json"
