--- a/app.json
+++ b/app.json
@@ -13,7 +13,7 @@
     },
     {
       "root": "pages/answer",
-      "pages": ["index/index"]
+      "pages": ["index/index", "form/index"]
     },
     {
       "root": "pages/teacher",
@@ -76,6 +76,10 @@
     "van-tag": "@vant/weapp/tag/index",
     "van-checkbox": "@vant/weapp/checkbox/index",
     "van-checkbox-group": "@vant/weapp/checkbox-group/index",
+    "van-cell": "@vant/weapp/cell/index",
+    "van-cell-group": "@vant/weapp/cell-group/index",
+    "van-count-down": "@vant/weapp/count-down/index",
+    "van-nav-bar": "@vant/weapp/nav-bar/index",
     "scroll": "/components/scroller",
     "container": "/components/container"
   },
