--- a/app.json
+++ b/app.json
@@ -6,10 +6,20 @@
     "pages/tabbar/profile/index",
     "pages/login/index"
   ],
-  "subpackages": [
-    {
+  "subpackages": [{
       "root": "pages/home",
       "pages": ["index/index"]
+    },
+    {
+      "root": "pages/profile",
+      "pages": [
+        "collect/index",
+        "success/index",
+        "files/index",
+        "skill/index",
+        "qr-code/index",
+        "opinion/index"
+      ]
     },
     {
       "root": "pages/answer",
@@ -31,8 +41,7 @@
     "selectedColor": "#1CBC9A",
     "backgroundColor": "#FFFFFF",
     "borderStyle": "black",
-    "list": [
-      {
+    "list": [{
         "pagePath": "pages/tabbar/home/index",
         "iconPath": "/assets/image/tabbar/index.png",
         "selectedIconPath": "/assets/image/tabbar/index-select.png",
