--- a/project.config.json
+++ b/project.config.json
@@ -77,6 +77,12 @@
           "pathName": "pages/tabbar/profile/index",
           "query": "params={\"prof_id\":2,\"module_id\":1,\"page_no\":1,\"page_size\":30,\"api\":\"getZiCeQues\",\"judge_count\":\"12\",\"radio_count\":\"1\",\"check_count\":\"1\",\"time\":\"1\"}",
           "scene": null
+        },
+        {
+          "name": "pages/teacher/student-list/index",
+          "pathName": "pages/teacher/student-list/index",
+          "query": "params={\"prof_id\":2,\"module_id\":1,\"page_no\":1,\"page_size\":30,\"api\":\"getZiCeQues\",\"judge_count\":\"12\",\"radio_count\":\"1\",\"check_count\":\"1\",\"time\":\"1\"}",
+          "scene": null
         }
       ]
     }
