--- a/app.json
+++ b/app.json
@@ -6,7 +6,8 @@
     "pages/tabbar/profile/index",
     "pages/login/index"
   ],
-  "subpackages": [{
+  "subpackages": [
+    {
       "root": "pages/home",
       "pages": ["index/index", "detail/index"]
     },
@@ -42,7 +43,8 @@
     "selectedColor": "#1CBC9A",
     "backgroundColor": "#FFFFFF",
     "borderStyle": "black",
-    "list": [{
+    "list": [
+      {
         "pagePath": "pages/tabbar/home/index",
         "iconPath": "/assets/image/tabbar/index.png",
         "selectedIconPath": "/assets/image/tabbar/index-select.png",
@@ -96,6 +98,7 @@
     "van-collapse-item": "@vant/weapp/collapse-item/index",
     "van-divider": "@vant/weapp/divider/index",
     "van-loading": "@vant/weapp/loading/index",
+    "van-uploader": "@vant/weapp/uploader/index",
     "scroll": "/components/scroller",
     "container": "/components/container",
     "load-more": "/components/load-more"
