开发中 修改老师登录进入老师目录

--- a/project.config.json
+++ b/project.config.json
@@ -93,6 +93,12 @@
         {
           "name": "pages/profile/files/index",
           "pathName": "pages/profile/files/index",
+          "query": "",
+          "scene": null
+        },
+        {
+          "name": "pages/teacher/student-list/index",
+          "pathName": "pages/teacher/student-list/index",
           "scene": null
         }
       ]
