开发中 修改已知问题

--- a/app.json
+++ b/app.json
@@ -29,7 +29,7 @@
     },
     {
       "root": "pages/teacher",
-      "pages": ["student-list/index", "skill/index"]
+      "pages": ["student-list/index", "student-skill/index"]
     }
   ],
   "window": {
