--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@vant/weapp": "^1.6.4",
     "dayjs": "^1.10.3",
     "lodash": "^4.17.20",
+    "sha1": "^1.1.1",
     "wx-promise-pro": "^3.2.2"
   }
 }
