开发中 修改已知问题

--- a/app.json
+++ b/app.json
@@ -102,6 +102,7 @@
     "van-uploader": "@vant/weapp/uploader/index",
     "van-calendar": "@vant/weapp/calendar/index",
     "van-datetime-picker": "@vant/weapp/datetime-picker/index",
+    "van-notice-bar": "@vant/weapp/notice-bar/index",
     "scroll": "/components/scroller",
     "container": "/components/container",
     "load-more": "/components/load-more"
